tests/cases/parser/literals/malformed_list_literal.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/malformed_list_literal.hash:3:5
2 |   
3 |   k = [1,
  |       ^ here
