tests/cases/parser/literals/malformed_list_literal.hash
// run=fail, stage=parse

k = [1,
